# autotabber

./: Cargo.toml  LICENSE.txt  Makefile  README.md
autotabber/: Cargo.toml
autotabber-gui/: Cargo.toml
autotabber-gui/src/: app.rs  main.rs
autotabber/src/: lib.rs  main.rs
src/: lib.rs  main.rs
