[package]
name = "autotabber-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "autotabber-egui"
path = "src/main.rs"

[dependencies]
eframe = "0.18.0" # Gives us egui, web+native backends
autotabber = { path = "../autotabber" }
